Added Data Layer

--- a/HealthAndCareHospital.Web/appsettings.json
+++ b/HealthAndCareHospital.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HealthAndCareHospital.Web-6D0BBD6D-A200-4D9B-8BC2-223B7E57ED04;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=HealthAndCareHospitalDb;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
