Added Create Doctor and Department

--- a/HealthAndCareHospital.Web/HealthAndCareHospital.Web.csproj
+++ b/HealthAndCareHospital.Web/HealthAndCareHospital.Web.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Admin\Models\DepartmentViewModel.cs" />
     <Compile Remove="Models\User.cs" />
   </ItemGroup>
 
@@ -30,10 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
-    <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Areas\Contact\Models\" />
     <Folder Include="Areas\Doctor\Controllers\" />
     <Folder Include="Areas\Doctor\Data\" />
