Added a few Unit tests

--- a/HealthAndCareHospital.Services/HealthAndCareHospital.Services.csproj
+++ b/HealthAndCareHospital.Services/HealthAndCareHospital.Services.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Implementations\UserService.cs" />
+    <Compile Remove="IUserService.cs" />
+    <Compile Remove="Models\Admin\UserServiceModel.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
   </ItemGroup>
