--- a/HealthAndCareHospital.Web/HealthAndCareHospital.Web.csproj
+++ b/HealthAndCareHospital.Web/HealthAndCareHospital.Web.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Admin\Controllers\UserController.cs" />
     <Compile Remove="Models\User.cs" />
   </ItemGroup>
 
